--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,9 @@ name:  dart-plugin-isolate
 description:  An example project implementing a simple plugin architecture
 
 dependencies:
-  args:
-    sdk: args
-  meta:
-    sdk: meta
+#  args:
+#    sdk: args
+#  meta:
+#    sdk: meta
+  unittest:
+    sdk: unittest
