Change project name and description in pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
-name: dart_plugin_isolate
+name: dart_plugin_proxy
+author: Daniel Schubert
 description: An example Dart project implementing a simple plugin architecture, which dynamically loads plugins in the VM and executes them in an isolate seen through a plugin proxy. The method call serialization is all done automatically with some noSuchMethod() magic.
+homepage: https://github.com/danschubert/dart_plugin_proxy
 
 #  args:
 #    sdk: args
